Esposta la porta 9000 per php-fpm

--- a/docker-compose.override.yml.dist
+++ b/docker-compose.override.yml.dist
@@ -11,6 +11,8 @@ services:
       - "80:80"
 
   php-fpm:
+    ports:
+      - '9000:9000'
     volumes:
       - ./code:/var/www/html
       - ./xdebug:/tmp/xdebug
